--- a/libs/mitlibraries-icons/style.css
+++ b/libs/mitlibraries-icons/style.css
@@ -35,6 +35,6 @@
 .icon-long-arrow-down:before {
 	content: "\f175";
 }
-.icon-arrow-right:before {
+/*.icon-arrow-right:before {
 	content: "\e600";
-}
+}*/
