Reset font-size and line-height

--- a/css/main.scss
+++ b/css/main.scss
@@ -17,8 +17,8 @@ Main CSS
 
 body {
 	font-family: Arial, serif;
-	font-size: 62.5%;
-	line-height: 1.5em;
+	font-size: 100%;
+	line-height: 1;
 	color: #333333;
 	background: #fff;
 	height: 100%;
