Fix breadcrumb padding and line-height

--- a/css/main.scss
+++ b/css/main.scss
@@ -352,10 +352,9 @@ nav a.active {
 
 #breadcrumb {
 	background: #eceaea;
-	font-size: 12px;
-	padding: 3px 20px 7px 20px;
-	height: 12px;
 	color: #666666;
+	font-size: 12px;
+	padding: 6px 20px 6px;
 }
 
 .betterBreadcrumbs {
